feat: person settings

--- a/config/hypr/waybar/style/style-default.css
+++ b/config/hypr/waybar/style/style-default.css
@@ -82,6 +82,8 @@ tooltip label{
 #bluetooth,
 #taskbar,
 #workspaces,
+#custom-menu,
+#custom-cycle_wall,
 #custom-light_dark,
 #custom-updater,
 #custom-power,
